Import of BARBIE/CPAN-Testers-Common-Article-0.39 from CPAN.
gitpan-cpan-distribution: CPAN-Testers-Common-Article
gitpan-cpan-version:      0.39
gitpan-cpan-path:         BARBIE/CPAN-Testers-Common-Article-0.39.tar.gz
gitpan-cpan-author:       BARBIE
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,9 @@
 Revision history for Perl module CPAN::Testers::Common::Article
 ===============================================================
 
+0.39    02/11/2009
+	- POD update, missing accessors.
+
 0.38    17/10/2009
 	- added even more regexes to try and extract Perl version.
 	- more pattern matches for osname
