Import of BARBIE/CPAN-Testers-Common-Article-0.41 from CPAN.
gitpan-cpan-distribution: CPAN-Testers-Common-Article
gitpan-cpan-version:      0.41
gitpan-cpan-path:         BARBIE/CPAN-Testers-Common-Article-0.41.tar.gz
gitpan-cpan-author:       BARBIE
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
 Revision history for Perl module CPAN::Testers::Common::Article
 ===============================================================
 
+0.41    26/03/2010
+	- added support for 'X-Test-Reporter-Perl' header to indicate a
+	  release candidate (RC) version of perl.
+
 0.40    03/01/2010
 	- added raw, cooked, header and body methods.
 
