Import of BARBIE/CPAN-Testers-Common-Article-0.45 from CPAN.
gitpan-cpan-distribution: CPAN-Testers-Common-Article
gitpan-cpan-version:      0.45
gitpan-cpan-path:         BARBIE/CPAN-Testers-Common-Article-0.45.tar.gz
gitpan-cpan-author:       BARBIE
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -46,9 +46,9 @@ RT: http://rt.cpan.org/Public/Dist/Display.html?Name=CPAN-Testers-Common-Article
 AUTHOR & COPYRIGHT
 
   Original author:    Leon Brocard <acme@astray.com>   (C) 2002-2008
-  Current maintainer: Barbie       <barbie@cpan.org>   (C) 2008-2012
+  Current maintainer: Barbie       <barbie@cpan.org>   (C) 2008-2014
 
 LICENCE
 
-  This module is free software; you can redistribute it and/or
-  modify it under the Artistic Licence v2.
+This distribution is free software; you can redistribute it and/or
+modify it under the Artistic License v2.
