--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
-Revision history for Perl module CPAN-Testers-Common-Article
-============================================================
+Revision history for CPAN-Testers-Common-Article
+================================================
+
+0.46    2014-09-07
+        - fixed license fields in META.json to be lists.
+        - added homepage to META files.
+        - fixed distribution name in metadata.
+        - catch exceptions from mail parsing.
+        - extended test suite.
 
 0.45    2014-07-19
         - updated license and repository links.
